--- a/src/components/UI/input/MyInput.module.css
+++ b/src/components/UI/input/MyInput.module.css
@@ -1,6 +1,7 @@
 .myInput {
   width: 100%;
-  padding: 5px 15px;
-  margin: 5px 0;
-  border: 2px solid teal;
+  padding: 15px 15px;
+  margin: 5px 0px;
+  border: 2px solid red;
+  color: #fff;
 }
