--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@
   box-sizing: border-box;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 20px;
+  background: #101010;
+  color: #fff;
 }
